changement de design

--- a/JobboardFront/src/app/navbar/navbar.component.html
+++ b/JobboardFront/src/app/navbar/navbar.component.html
@@ -1,13 +1,13 @@
 <nav class="navbar">
   <div class="logo">
-    <a routerLink="/">Job<span class="highlight">Board</span></a>
+    <a >Job<span class="highlight">Board</span></a>
   </div>
 
   <ul class="nav-links">
-    <li><a routerLink="/">Home</a></li>
-    <li><a routerLink="/joboffer">Jobs</a></li>
-    <li><a routerLink="/about">About</a></li>
-    <li><a routerLink="/contact">Contact</a></li>
+    <li><a routerLink="home">Home</a></li>
+    <li><a href="#offers">Jobs</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#contact">Contact</a></li>
   </ul>
 
   <div class="auth-buttons">
