--- a/JobboardFront/src/app/navbar/navbar.component.css
+++ b/JobboardFront/src/app/navbar/navbar.component.css
@@ -6,18 +6,18 @@
   padding: 16px 48px;
   min-width: 95%;
   background-color: white;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
 
 .logo a {
   font-size: 24px;
   font-weight: bold;
-  color: #134283;
+  color: #0065F2;
   text-decoration: none;
 }
 
 .logo .highlight {
-  color: #0065F2;
+  color: black;
 }
 
 .nav-links {
@@ -36,6 +36,7 @@
 .nav-links a:hover {
   color: #0065F2;
 }
+
 
 .auth-buttons {
   display: flex;
