--- a/JobboardFront/src/app/pages/home/home.component.css
+++ b/JobboardFront/src/app/pages/home/home.component.css
@@ -42,22 +42,16 @@
   max-width: 600px;
 }
 
-.search-bar {
+.welcome {
   display: flex;
   align-items: center;
   width: 100%;
   gap: 0.5rem;
 }
 
-.search-bar input {
-  padding: 0.75rem 1rem;
-  border: 1px solid #0065F2;
-  border-radius: 20px;
-  font-size: 1rem;
-  flex: 1;
-}
 
-.search-bar .btn-primary {
+
+.welcome .btn-primary {
   padding: 0.75rem 1.5rem;
   background-color: #0065F2;
   color: white;
@@ -66,6 +60,10 @@
   font-size: 1rem;
   border-radius: 20px;
   white-space: nowrap;
+  cursor: pointer;
+}
+.welcome .btn-primary:hover {
+  background-color: #182C4D;
 }
 
 .image-section {
@@ -368,7 +366,7 @@
 }
 
 .footer a {
-  color: #4f8df5;
+  color: #0065F2;
   text-decoration: none;
   display: block;
   margin-bottom: 8px;
@@ -388,7 +386,7 @@
 }
 
 .socials a:hover {
-  color: #4f8df5;
+  color: #0065F2;
 }
 .socials {
   display: flex;
