--- a/JobboardFront/src/app/pages/home/home.component.html
+++ b/JobboardFront/src/app/pages/home/home.component.html
@@ -1,11 +1,11 @@
-<section class="hero">
+<section id="home" class="hero">
   <div class="hero-content">
     <div class="text-section">
       <h1>Find your <span class="highlight">perfect job</span> in one place</h1>
       <p>Our platform centralizes job offers from top companies to give you a fast, efficient, and personalized job search experience.</p>
-      <div class="search-bar">
-        <input type="text" placeholder="Search by title, company, or keyword" />
-        <button class="btn-primary">Search</button>
+      <div class="welcome">
+        <button routerLink="/signup" class="btn-primary">Get started ></button>
+
       </div>
     </div>
     <div class="image-section">
@@ -39,7 +39,7 @@
 
 
 
-<section class="about-section">
+<section id="about" class="about-section">
   <div class="container">
     <div class="intro">
       <h2><span class="highlight">About</span> Our Platform</h2>
@@ -82,22 +82,22 @@
     </div>
   </div>
 </section>
-<section class="stats-container">
+<section  class="stats-container">
   <div class="stat-item">
-      <h4><i class="fas fa-laptop-code"></i> Tech</h4>
+      <h3><i class="fas fa-laptop-code"></i> Tech</h3>
       <p>1200+ Offers</p>
     </div>
   <div class="stat-item">
-      <h4><i class="fas fa-paint-brush"></i> Design</h4>
+      <h3><i class="fas fa-paint-brush"></i> Design</h3>
       <p>850+ Offers</p>
     </div>
   <div class="stat-item">
-      <h4><i class="fas fa-briefcase"></i> Business</h4>
+      <h3><i class="fas fa-briefcase"></i> Business</h3>
       <p>700+ Offers</p>
     </div>
 
   <div class="stat-item">
-      <h4><i class="fas fa-cogs"></i> Engineering</h4>
+      <h3><i class="fas fa-cogs"></i> Engineering</h3>
       <p>950+ Offers</p>
     </div>
 
@@ -121,7 +121,7 @@
     </div>
   </div>
 </section>
-<footer class="footer">
+<footer  id="contact" class="footer">
   <div class="footer-content">
 
     <div class="footer-section about">
@@ -160,7 +160,7 @@
   </div>
 
   <div class="footer-bottom">
-    © 2025 Meissa Kerkeni. All rights reserved.
+    © 2025 Meissa Kerkeni. All rights reserved.Made with ♡
   </div>
 </footer>
 
