--- a/JobboardFront/src/app/pages/offres/offres-list/offres-list.component.html
+++ b/JobboardFront/src/app/pages/offres/offres-list/offres-list.component.html
@@ -1,59 +1,64 @@
 <div class="job-container">
-    <div class="sidebar">
-      <div class="search-bar">
-        <div class="input-icon">
-          <i class="fas fa-search"></i>
-          <input
-            type="text"
-            [(ngModel)]="searchKeyword"
-            (ngModelChange)="applyFilters()"
-            placeholder="Keywords"
-          />
-        </div>
+  <div class="search-bar">
+    <div class="input-icon">
+      <i class="fas fa-search"></i>
+      <input type="text" [(ngModel)]="searchKeyword" (ngModelChange)="applyFilters()" placeholder="Keywords" />
+    </div>
 
-        <div class="input-icon">
-          <i class="fas fa-map-marker-alt"></i>
-          <input
-            type="text"
-            [(ngModel)]="searchLocation"
-            (ngModelChange)="applyFilters()"
-            placeholder="Location"
-          />
-        </div>
+    <div class="input-icon">
+      <i class="fas fa-map-marker-alt"></i>
+      <input type="text" [(ngModel)]="searchLocation" (ngModelChange)="applyFilters()" placeholder="Location" />
+    </div>
+  </div>
+  <div class="content">
+    <div class="filters">
+      <h3>Filters</h3>
 
+      <label>Contract Type</label>
+      <select [(ngModel)]="selectedType" (change)="applyFilters()">
+        <option value="">All</option>
+        <option *ngFor="let type of contractTypes" [value]="type">{{ type }}</option>
+      </select>
+
+      <label>Experience</label>
+      <select [(ngModel)]="selectedExperience" (change)="applyFilters()">
+        <option value="">All</option>
+        <option *ngFor="let exp of experiences" [value]="exp">{{ exp }}</option>
+      </select>
+
+      <label>Source</label>
+      <select [(ngModel)]="selectedSource" (change)="applyFilters()">
+        <option value="">All</option>
+        <option *ngFor="let source of sources" [value]="source">{{ source }}</option>
+      </select>
+
+      <label>Minimum Salary</label>
+      <input type="number" [(ngModel)]="minSalary" (ngModelChange)="applyFilters()" placeholder="e.g. 1000" />
+
+      <label>Sort by</label>
+      <select [(ngModel)]="sortOrder" (change)="applyFilters()">
+        <option value="latest">Most Recent</option>
+        <option value="oldest">Oldest</option>
+        <option value="salary">Salary</option>
+      </select>
+
+      <button class="reset-btn" (click)="resetFilters()">Reset Filters</button>
+
+      <div class="pagination">
+        <button (click)="prevPage()" [disabled]="currentPage === 1">Previous</button>
+        <span>Page {{ currentPage }} of {{ totalPages }}</span>
+        <button (click)="nextPage()" [disabled]="currentPage === totalPages">Next</button>
       </div>
     </div>
 
-    <div class="content">
-        <div class="filters">
-            <h3>Filter</h3>
-            <ul>
-                <li *ngFor="let type of ['CDD', 'CDI', 'Internship', 'Freelance', 'SIVP', 'ContratKarama']"
-                    [ngClass]="{'selected': selectedType === type}"
-                    (click)="filterByType(type)"
-                    (keyup.enter)="filterByType(type)"
-                    role="button"
-                    tabindex="0">
-                    {{ type }}
-                </li>
-            </ul>
-        </div>
-
-      <div class="job-list">
-        <div *ngFor="let job of filteredJobs" class="job-card">
-          <h3>{{ job.title }}</h3>
-          <p *ngIf="!job.showMore">{{ job.description | slice:0:20 }}...</p>
-
-
-          <p><i class="fas fa-building"></i> {{ job.company }}</p>
-
-
-          <p><i class="fas fa-map-marker-alt"></i> {{ job.location }}</p>
-
-          <button [routerLink]="['/offers', job.id]" class="see">See more</button>
-        </div>
+  <div class="job-list">
+      <div *ngFor="let job of filteredJobs" class="job-card">
+        <h3>{{ job.title }}</h3>
+        <p *ngIf="!job.showMore">{{ job.description | slice: 0:100 }}...</p>
+        <p><i class="fas fa-building"></i> {{ job.company }}</p>
+        <p><i class="fas fa-map-marker-alt"></i> {{ job.location }}</p>
+        <button   (click)="seeMore(job.id)"  class="see">see more</button>
       </div>
-
     </div>
+  </div>
 </div>
-
